# sniff

./: .gitignore  .pylintrc  CMakeLists.txt  Makefile  README.md  conanfile.txt  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
eval/: README.md  rc_stats.py  ref_mapping_stats.py  run-sniff.py  run_sniff.py
include/sniff/: algo.h  chain.h  config.h  io.h  kmer.h  map.h  map_config.h  match.h  minimize.h  minimize_config.h  overlap.h  sketch.h
resources/: sniff-lgbm-model.pkl
scripts/ci/: install_cmake.sh  install_conan.sh
scripts/eval/: run_sniff.py
scripts/inference/: lgbm_filter.py
src/: algo.cc  algo.h  chain.cc  config.cc  io.cc  io.h  kmer.cc  main.cc  map.cc  map_config.cc  match.cc  minimize.cc  minimize_config.cc  overlap.cc  version.h.in
test/: SniffTest.cmake  main.cc
test/data/: sample.fasta
test/scripts/: gen_seq.py  minimize.py  minimizer.py
test/src/: chain.cc  kmer.cc  map.cc  match.cc  minimize.cc  overlap.cc
tools/: README.md  SniffTools.cmake
tools/src/: pairs_edit_dist.cc
